Added metrics and health route
